# bms-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md  deny.toml  release-please-config.json  rustfmt.toml
.github/: renovate.json
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  cargo-deny-else.yml  cargo-deny.yml  publish.yml  release-please.yml  rust.yml
benches/: .criterion-config.toml  bms_to_chart.rs  bmson_to_chart.rs  parse_bms.rs  parse_bmson.rs
examples/: bms_to_tokens.rs  bmson_parser.rs  comprehensive_diagnostics.rs  diagnostics_example.rs  export_events_csv.rs  export_events_toml.rs  microquad_player.rs
src/: bms.rs  bmson.rs  chart.rs  chart_process.rs  command.rs  cursor.rs  diagnostics.rs  lex.rs  lib.rs  parse.rs  test_helpers.rs  time.rs  token.rs  util.rs
src/bms/: ast.rs  command.rs  diagnostics.rs  error.rs  lex.rs  math.rs  model.rs  parse.rs  prelude.rs  process.rs  rng.rs  time.rs  unparse.rs
src/bms/ast/: ast_build.rs  ast_extract.rs  ast_parse.rs  rng.rs  structure.rs
src/bms/command/: channel.rs  graphics.rs  minor_command.rs  mixin.rs  string_value.rs  time.rs
src/bms/command/channel/: converter.rs  mapper.rs
src/bms/lex/: command.rs  command_impl.rs  cursor.rs  parser.rs  parsers.rs  relaxer.rs  token.rs  token_parser.rs
src/bms/lex/command/: channel.rs
src/bms/model/: arrangers.rs  bmp.rs  bpm.rs  control_flow.rs  def.rs  graphics.rs  judge.rs  metadata.rs  music_info.rs  notes.rs  obj.rs  option.rs  random.rs  repr.rs  resources.rs  scroll.rs  section_len.rs  speed.rs  sprite.rs  stop.rs  text.rs  video.rs  volume.rs  wav.rs
src/bms/model/control_flow/: activate.rs  build.rs  construct.rs  into_tokens.rs
src/bms/parse/: check_playing.rs  header.rs  model.rs  notes.rs  obj.rs  prompt.rs  random.rs  rng.rs  to_tokens.rs  token_processor.rs  validity.rs
src/bms/parse/model/: def.rs  notes_pack.rs  obj.rs
src/bms/parse/random/: ast_build.rs  ast_parse.rs  rng.rs
src/bms/parse/token_processor/: bmp.rs  bpm.rs  control_flow.rs  identity.rs  judge.rs  metadata.rs  music_info.rs  option.rs  random.rs  repr.rs  resources.rs  scroll.rs  section_len.rs  seek.rs  speed.rs  sprite.rs  stop.rs  text.rs  video.rs  volume.rs  wav.rs
src/bmson/: bms_to_bmson.rs  bmson_to_bms.rs  fin_f64.rs  json_de.rs  parse.rs  parser.rs  prelude.rs  process.rs  pulse.rs
src/chart/: base_bpm.rs  event.rs  key.rs  key_mapping.rs  player.rs  prelude.rs  process.rs  processor.rs  types.rs
src/chart/key_mapping/: check.rs  converter.rs  mapper.rs
src/chart/player/: base_bpm.rs
src/chart/process/: bms.rs  bmson.rs
src/chart/processor/: bms.rs  bmson.rs
src/chart_process/: base_bpm.rs  bms_processor.rs  bmson_processor.rs  core.rs  parser.rs  player.rs  prelude.rs  processor.rs  resource.rs  types.rs  utils.rs  y_calculator.rs
src/chart_process/processor/: bms.rs  bms_processor.rs  bmson.rs  bmson_processor.rs
src/lex/: command.rs  cursor.rs  token.rs
src/parse/: header.rs  notes.rs  obj.rs  random.rs  rng.rs
src/parse/random/: block.rs
tests/: J219_7key.bms  base_62.rs  bemuse_ext.bms  bms_cursor_with_edges.rs  bms_unparse_roundtrip.rs  bmson_to_bms.rs  comment.rs  convert_bmson_to_bms.rs  cursor_with_edges.rs  diagnostics_test.rs  dive_withblank.bme  extra_channel.rs  files.rs  files_bmson.rs  invaild_bmson.rs  lal.rs  lilith_mx.bms  lnobj.rs  mod.rs  nested_random.rs  nested_switch.rs  parse_bmson_error_recovery.rs  parse_extended_tokens.rs  playing_conditions.rs  prelude_test.rs  prompt_handlers.rs  simple.rs
tests/bms/: base_62.rs  comment.rs  control_flow_model.rs  cursor_with_edges.rs  diagnostics_test.rs  extra_channel.rs  files.rs  mod.rs  nested_random.rs  nested_switch.rs  parse_extended_tokens.rs  playing_conditions.rs  prelude_test.rs  prompt_handlers.rs  random_errors.rs  random_model.rs  relaxed_lex.rs  switch_model.rs  unparse_merge.rs  unparse_roundtrip.rs
tests/bms/files/: J219_7key.bms  lilith_mx.bms  nc_mx.bme
tests/bmson/: convert_to_bms.rs  files.rs  mod.rs
tests/bmson/files/: bemusicstory_483_48K_ANOTHER.bmson  lostokens.bmson
tests/chart/: mod.rs
tests/chart/bms/: chart.rs  mod.rs  playback_state.rs  section.rs  visible_events.rs
tests/chart/bmson/: activate_time.rs  chart.rs  continue_time.rs  mod.rs  playback_state.rs  visible_events.rs
tests/chart_process/: bms_processor.rs  bmson_processor.rs  bpm_changes.rs  combined_scenarios.rs  correctness_guarantees.rs  edge_cases.rs  mod.rs  player.rs  scroll_changes.rs  speed_changes.rs  update_consistency.rs
tests/chart_process/bms/: chart.rs  mod.rs  playback_state.rs  section.rs  visible_events.rs
tests/chart_process/bms/files/: speed_changes.bms
tests/chart_process/bmson/: activate_time.rs  chart.rs  continue_time.rs  mod.rs  playback_state.rs  visible_events.rs
tests/chart_process/dsl/: driver.rs  helpers.rs  mod.rs  time_step.rs
tests/chart_process/files/: bpm_changes.bms  combined_changes.bms  scroll_changes.bms
tests/files/: bemuse_ext.bms  nc_mx.bme
