[package]
name = "bms-rs"
version = "0.10.1"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2024"
description = "The BMS format parser."
license = "Apache-2.0"
keywords = ["bms", "parser"]
categories = ["parsing"]
repository = "https://github.com/MikuroXina/bms-rs"
documentation = "https://docs.rs/bms-rs/latest/bms_rs/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["bmson", "rand", "diagnostics"]
serde = ["dep:serde", "num/serde"]
bmson = ["serde", "serde_json", "serde_path_to_error", "chumsky"]
rand = ["dep:rand"]
diagnostics = ["dep:ariadne"]

[dependencies]
itertools = "0.14"
num = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
thiserror = "2"
rand = { version = "0.10", optional = true }
ariadne = { version = "0.6", optional = true }
chumsky = { version = "0.12", optional = true, features = ["serde"] }
gametime = { version = "0.7", features = ["global_reference"] }
strict-num-extended = { version = "0.5", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
kira = { version = "0.12", features = ["cpal"] }
rayon = "1.10"
criterion = { version = "0.8", default-features = false, features = ["rayon", "cargo_bench_support"] }

[[example]]
name = "diagnostics_example"
required-features = ["diagnostics"]

[[example]]
name = "comprehensive_diagnostics"
required-features = ["diagnostics"]

[[example]]
name = "microquad_player"
required-features = ["diagnostics"]

[[bench]]
name = "parse_bms"
harness = false

[[bench]]
name = "parse_bmson"
harness = false

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "allow"
unused_extern_crates = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }

# Pedantic (Applicability: MachineApplicable)
cast_lossless = "allow"
wildcard_imports = "allow"

# Pedantic (Applicability: MaybeIncorrect)
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

# Pedantic (Applicability: Unspecified)
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
similar_names = "allow"

# Restriction (Applicability: MachineApplicable)
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "allow"
separated_literal_suffix = "allow"
unseparated_literal_suffix = "allow"

# Restriction (Applicability: MaybeIncorrect)
decimal_literal_representation = "warn"
empty_drop = "warn"
mutex_atomic = "warn"
wildcard_enum_match_arm = "allow"

# Restriction (Applicability: HasPlaceholders)
float_cmp_const = "warn"

# Restriction (Applicability: Unspecified)
as_conversions = "allow"
cognitive_complexity = "allow"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "allow"
indexing_slicing = "warn"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
panic = "allow"
panic_in_result_fn = "warn"
print_stderr = "allow"
print_stdout = "allow"
rc_buffer = "warn"
self_named_module_files = "allow"
shadow_unrelated = "allow"
string_add = "warn"
string_slice = "allow"
todo = "warn"
unimplemented = "warn"
unneeded_field_pattern = "allow"
unreachable = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Nursery (Applicability: MachineApplicable)
missing_const_for_fn = "warn"
needless_collect = "warn"
redundant_clone = "allow"
redundant_pub_crate = "warn"
string_lit_as_bytes = "warn"
too_long_first_doc_paragraph = "allow"
unnecessary_struct_initialization = "allow"
unused_rounding = "warn"

# Nursery (Applicability: MaybeIncorrect)
iter_with_drain = "warn"
option_if_let_else = "warn"
significant_drop_in_scrutinee = "warn"

# Nursery (Applicability: HasPlaceholders)
or_fun_call = "warn"

# Nursery (Applicability: Unspecified)
future_not_send = "warn"

# Cargo (Applicability: Unspecified)
multiple_crate_versions = "allow"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "deny"

