[package]
name = "bms-rs"
version = "0.10.1"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2024"
description = "The BMS format parser."
license = "Apache-2.0"
keywords = ["bms", "parser"]
categories = ["parsing"]
repository = "https://github.com/MikuroXina/bms-rs"
documentation = "https://docs.rs/bms-rs/latest/bms_rs/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["bmson", "rand", "diagnostics"]
serde = ["dep:serde", "num/serde"]
bmson = ["serde", "serde_json", "serde_path_to_error", "chumsky"]
rand = ["dep:rand"]
diagnostics = ["dep:ariadne"]

[dependencies]
itertools = "0.14"
num = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
thiserror = "2"
rand = { version = "0.10", optional = true }
ariadne = { version = "0.6", optional = true }
chumsky = { version = "0.12", optional = true, features = ["serde"] }
gametime = { version = "0.7", features = ["global_reference"] }
strict-num-extended = { version = "0.5", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
kira = { version = "0.12", features = ["cpal"] }
rayon = "1.10"
criterion = { version = "0.8", default-features = false, features = ["rayon", "cargo_bench_support"] }

[[example]]
name = "diagnostics_example"
required-features = ["diagnostics"]

[[example]]
name = "comprehensive_diagnostics"
required-features = ["diagnostics"]

[[example]]
name = "microquad_player"
required-features = ["diagnostics"]

[[bench]]
name = "parse_bms"
harness = false

[[bench]]
name = "parse_bmson"
harness = false

[lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "allow"
unused_extern_crates = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_doc_tests = "warn"
invalid_html_tags = "warn"
bare_urls = "warn"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }

# Correctness (Applicability: MaybeIncorrect)
async_yields_async = "warn"
vec_resize_to_zero = "warn"

# Correctness (Applicability: Unspecified)
if_let_mutex = "warn"
panicking_overflow_checks = "warn"
redundant_comparisons = "warn"

# Complexity (Applicability: MachineApplicable)
bind_instead_of_map = "warn"
char_lit_as_u8 = "warn"
clone_on_copy = "warn"
double_comparisons = "warn"
extra_unused_type_parameters = "warn"
filter_map_identity = "warn"
int_plus_one = "warn"
iter_count = "warn"
manual_filter = "warn"
manual_filter_map = "warn"
manual_find = "warn"
manual_flatten = "warn"
manual_strip = "warn"
map_identity = "warn"
match_single_binding = "warn"
needless_borrowed_reference = "warn"
needless_match = "warn"
redundant_closure_call = "warn"
string_from_utf8_as_bytes = "warn"
unnecessary_cast = "warn"
unnecessary_operation = "warn"

# Complexity (Applicability: MaybeIncorrect)
no_effect = "warn"

# Complexity (Applicability: Unspecified)
borrowed_box = "warn"
extra_unused_lifetimes = "warn"
too_many_arguments = "warn"
type_complexity = "warn"
unnecessary_unwrap = "warn"
vec_box = "warn"
zero_divided_by_zero = "warn"

# Style (Applicability: MachineApplicable)
collapsible_if = "warn"
iter_next_slice = "warn"
iter_nth_zero = "warn"
manual_map = "warn"
must_use_unit = "warn"
needless_borrow = "warn"
needless_borrows_for_generic_args = "warn"
partialeq_to_none = "warn"
redundant_closure = "warn"
string_extend_chars = "warn"
unnecessary_fold = "warn"
unnecessary_lazy_evaluations = "warn"
unused_unit = "warn"

# Style (Applicability: MaybeIncorrect)
fn_to_numeric_cast = "warn"
fn_to_numeric_cast_with_truncation = "warn"
inconsistent_digit_grouping = "warn"

# Style (Applicability: HasPlaceholders)
needless_range_loop = "warn"

# Style (Applicability: Unspecified)
collapsible_match = "warn"
double_must_use = "warn"
module_inception = "warn"
should_implement_trait = "warn"

# Pedantic (Applicability: MachineApplicable)
borrow_as_ptr = "warn"
cast_lossless = "allow"
doc_markdown = "warn"
explicit_deref_methods = "warn"
implicit_clone = "warn"
match_bool = "warn"
must_use_candidate = "warn"
needless_bitwise_bool = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
wildcard_imports = "allow"

# Pedantic (Applicability: MaybeIncorrect)
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
format_push_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
str_split_at_newline = "warn"
unreadable_literal = "allow"
verbose_bit_mask = "warn"

# Pedantic (Applicability: HasPlaceholders)
comparison_chain = "warn"
float_cmp = "warn"
manual_let_else = "allow"

# Pedantic (Applicability: Unspecified)
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "warn"
copy_iterator = "warn"
large_futures = "warn"
match_wild_err_arm = "warn"
missing_errors_doc = "warn"
return_self_not_must_use = "warn"
similar_names = "allow"
string_add_assign = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unused_async = "warn"
unused_self = "allow"
used_underscore_binding = "allow"
zero_sized_map_values = "warn"

# Perf (Applicability: MachineApplicable)
missing_const_for_thread_local = "warn"
unnecessary_to_owned = "warn"

# Perf (Applicability: MaybeIncorrect)
redundant_allocation = "warn"

# Perf (Applicability: HasPlaceholders)
manual_try_fold = "warn"
vec_init_then_push = "warn"

# Perf (Applicability: Unspecified)
box_collection = "warn"
manual_memcpy = "warn"

# Restriction (Applicability: MachineApplicable)
if_then_some_else_none = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
separated_literal_suffix = "warn"
unseparated_literal_suffix = "allow"

# Restriction (Applicability: MaybeIncorrect)
decimal_literal_representation = "warn"
empty_drop = "warn"
mutex_atomic = "warn"
wildcard_enum_match_arm = "allow"

# Restriction (Applicability: HasPlaceholders)
float_cmp_const = "warn"

# Restriction (Applicability: Unspecified)
as_conversions = "allow"
cognitive_complexity = "allow"
empty_structs_with_brackets = "warn"
exit = "warn"
expect_used = "allow"
indexing_slicing = "warn"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
panic = "allow"
panic_in_result_fn = "warn"
print_stderr = "allow"
print_stdout = "allow"
rc_buffer = "warn"
self_named_module_files = "allow"
shadow_unrelated = "warn"
string_add = "warn"
string_slice = "allow"
todo = "warn"
unimplemented = "warn"
unneeded_field_pattern = "allow"
unreachable = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# Suspicious (Applicability: MaybeIncorrect)
float_equality_without_abs = "warn"
octal_escapes = "warn"

# Suspicious (Applicability: Unspecified)
await_holding_lock = "warn"
incompatible_msrv = "warn"

# Nursery (Applicability: MachineApplicable)
missing_const_for_fn = "warn"
needless_collect = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
search_is_some = "warn"
string_lit_as_bytes = "warn"
unused_rounding = "warn"

# Nursery (Applicability: MaybeIncorrect)
iter_with_drain = "warn"
option_if_let_else = "warn"
significant_drop_in_scrutinee = "warn"

# Nursery (Applicability: HasPlaceholders)
or_fun_call = "warn"

# Nursery (Applicability: Unspecified)
future_not_send = "warn"

# Cargo (Applicability: Unspecified)
multiple_crate_versions = "allow"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "deny"
